# BinOps

./: BinOps.cabal  ChangeLog.md  Main.hs  README.md
BinOps/: Eval.hs  Model.hs  Parser.hs
